# minecraft-server-helper

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  example-config.yaml  pyproject.toml
.github/workflows/: nightly-build.yml
docs/: cli.md  configuration.md  how-it-works.md  server-types.md
scripts/: build.py
src/mc_helper/: cli.py  config.py  curseforge_api.py  github_release.py  http_client.py  launch.py  manifest.py  modrinth_api.py  server_properties.py  utils.py
src/mc_helper/modpack/: _archives.py  _detect.py  _filters.py  curseforge.py  custom.py  ftb.py  gtnh.py  modrinth.py  server_pack.py  serverpack.py
src/mc_helper/mods/: curseforge.py  modrinth.py
src/mc_helper/pack/: server_pack.py
src/mc_helper/server/: __init__.py  base.py  fabric.py  forge.py  neoforge.py  paper.py  purpur.py  vanilla.py
tests/: conftest.py  test_cli.py  test_config.py  test_curseforge.py  test_detect.py  test_ftb.py  test_http_client.py  test_launch.py  test_manifest.py  test_modrinth.py  test_mods_curseforge.py  test_mods_modrinth.py  test_server_pack.py  test_vanilla.py
tests/e2e/: .containerignore  Containerfile  cli-shim.py  run_tests.sh  test_e2e.py
tests/e2e/configs/: modpack-aoc.yaml  modpack-cobblemon.yaml  modpack-ftb-sb4.yaml  modpack-with-added-mods.yaml  server-fabric.yaml  server-forge.yaml  server-neoforge.yaml  server-paper.yaml  server-purpur.yaml  server-vanilla.yaml  serverpack-gtnh.yaml  serverpack-tfg.yaml
